creation bouton pour afficher le composant de prise de RDV

--- a/TpCalendar/src/app/Component/daily/daily.component.html
+++ b/TpCalendar/src/app/Component/daily/daily.component.html
@@ -1,1 +1,7 @@
-<p>daily works!</p>
+<div>
+    <ul *ngFor="let creneau of creneaux">
+        <p class="creneau"> {{ creneau }}
+            <button>Choisir ce Rendez Vous</button>
+        </p>
+    </ul>
+</div>
