Add prise de rendez-vous on daily

--- a/TpCalendar/src/app/app.component.html
+++ b/TpCalendar/src/app/app.component.html
@@ -5,7 +5,7 @@
     <button (click)="isAdmin=adminChangeMode(isAdmin)">Ajoute le component </button>
     <p *ngIf="isAdmin===true; else notAdmin">
 
-      <app-form></app-form>
+      <!-- <app-form></app-form> -->
       <app-daily>
       </app-daily>
     </p>
