--- a/TpCalendar/src/app/Component/daily/daily.component.html
+++ b/TpCalendar/src/app/Component/daily/daily.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="contentDaily">
     <ul *ngFor="let creneau of creneaux">
         <p class="creneau"> {{ creneau }}
-            <button>Choisir ce Rendez Vous</button>
+            <button (click)="formAppel()">Choisir ce Rendez Vous</button>
         </p>
     </ul>
 </div>
