--- a/TpCalendar/src/app/Component/sidebar/sidebar.component.html
+++ b/TpCalendar/src/app/Component/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
 <div id="sidebar">
-    <button>Prise de RDV</button>
+    <button (click)="adminChangeMode()">Prise de RDV</button>
     <div>Calendrier de RDV</div>
 </div>
