Add date in navbar and make the Prise de Rdv on

--- a/src/app/Component/navbar/navbar.component.html
+++ b/src/app/Component/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div id="content">
     <div id="logo">Logo</div>
-    <div id="date">Date du jour</div>
+    <div id="date">{{createDate | date : 'dd MMMM YYYY' }}</div>
     <div>
         <button id="button">Login</button>
     </div>
