--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -1,4 +1,9 @@
 <div id="sidebar">
-    <button (click)="adminChangeMode()">Prise de RDV</button>
+    <button (click)="afficheFormulaire=appelFormulairePriseRdv(afficheFormulaire)">Prise de RDV</button>
+    <p *ngIf="afficheFormulaire===true; else notAfficheFormulaire">
+        <app-form></app-form>
+    </p>
+    <ng-template #notAfficheFormulaire>
+    </ng-template>
     <div>Calendrier de RDV</div>
 </div>
