--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,8 @@
 <div id="contentApp">
   <app-navbar></app-navbar>
   <app-sidebar></app-sidebar>
-  <div>
-    <button (click)="isAdmin=adminChangeMode(isAdmin)">Ajoute le component </button>
-    <p *ngIf="isAdmin===true; else notAdmin">
-
-      <!-- <app-form></app-form> -->
-      <app-daily>
-      </app-daily>
-    </p>
-    <ng-template #notAdmin>
-    </ng-template>
+  <div class="affichageDroite">
+    <app-daily>
+    </app-daily>
   </div>
 </div>
