--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -1,9 +1,15 @@
-<div id="sidebar">
-    <button (click)="afficheFormulaire=appelFormulairePriseRdv(afficheFormulaire)">Prise de RDV</button>
-    <p *ngIf="afficheFormulaire===true; else notAfficheFormulaire">
-        <app-form></app-form>
-    </p>
-    <ng-template #notAfficheFormulaire>
-    </ng-template>
-    <div>Calendrier de RDV</div>
+<div id="general">
+    <div id="sidebar">
+        <button (click)="afficheFormulaire=appelFormulairePriseRdv(afficheFormulaire)">Prise de RDV</button>
+
+        <div>Calendrier de RDV</div>
+    </div>
+    <div>
+        <p *ngIf="afficheFormulaire===true; else notAfficheFormulaire">
+
+            <app-form></app-form>
+        </p>
+        <ng-template #notAfficheFormulaire>
+        </ng-template>
+    </div>
 </div>
