--- a/src/app/Component/form/form.component.css
+++ b/src/app/Component/form/form.component.css
@@ -1,4 +1,76 @@
 .error {
- color: red;
- font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: red;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+input[type=text],
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+input[type=email] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    cursor: pointer;
+}
+
+label {
+    font-size: small;
+    font-weight: 600;
+    padding: 6px 6px 6px 0;
+    display: inline-block;
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.button {
+    margin-top: 10px;
+    background-color: #04AA6D;
+    color: white;
+    padding: 6px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
+
+div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 0px;
+}
+
+.container {
+    box-shadow: 4px 4px 5px rgb(154, 154, 154);
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 10px;
 }
