ajout du css sur tout les boutons

--- a/src/app/Component/navbar/navbar.component.html
+++ b/src/app/Component/navbar/navbar.component.html
@@ -2,6 +2,6 @@
     <div id="logo">Logo</div>
     <div id="date">{{createDate | date : 'dd MMMM YYYY' }}</div>
     <div>
-        <button id="button">Login</button>
+        <button class="button" id="button">Login</button>
     </div>
 </div>
