--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 <div id="general">
     <div id="sidebar">
-        <button (click)="afficheFormulaire=appelFormulairePriseRdv(afficheFormulaire)">Prise de RDV</button>
+        <button class="button" (click)="afficheFormulaire=appelFormulairePriseRdv(afficheFormulaire)">Prise de
+            RDV</button>
         <div>Calendrier de RDV</div>
     </div>
     <div>
