--- a/src/app/Component/form/form.component.css
+++ b/src/app/Component/form/form.component.css
@@ -9,6 +9,7 @@
 
 input[type=text],
 textarea {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -17,6 +18,7 @@ textarea {
 }
 
 input[type=email] {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -25,6 +27,7 @@ input[type=email] {
 }
 
 input[type=submit] {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     background-color: #04AA6D;
     color: white;
     padding: 12px;
@@ -48,6 +51,7 @@ label {
 }
 
 .button {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     margin-top: 10px;
     background-color: #04AA6D;
     color: white;
@@ -69,7 +73,7 @@ div {
 }
 
 .container {
-    box-shadow: 4px 4px 5px rgb(154, 154, 154);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 10px;
