--- a/src/app/Component/navbar/navbar.component.css
+++ b/src/app/Component/navbar/navbar.component.css
@@ -4,3 +4,18 @@
     display: flex;
     justify-content: space-between;
 }
+
+.button {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    background-color: #04AA6D;
+    color: white;
+    padding: 6px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
