--- a/src/app/Component/form/form.component.css
+++ b/src/app/Component/form/form.component.css
@@ -9,7 +9,7 @@
 
 input[type=text],
 textarea {
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -18,7 +18,7 @@ textarea {
 }
 
 input[type=email] {
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -27,7 +27,7 @@ input[type=email] {
 }
 
 input[type=submit] {
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     background-color: #04AA6D;
     color: white;
     padding: 12px;
