--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div id="contentApp">
+<!-- <div id="contentApp">
   <app-navbar></app-navbar>
   <app-sidebar></app-sidebar>
   <app-admin></app-admin>
-</div>
+</div> -->
+<app-calendar></app-calendar>
