ajout class admin

--- a/src/app/Component/admin/admin.component.css
+++ b/src/app/Component/admin/admin.component.css
@@ -1,4 +1,7 @@
 .detailRDV {
-cursor: pointer;
-background-color: aqua;
+/* cursor: pointer; */
+    background-color: aqua;
+}
+.formEdit{
+    background-color: yellow;
 }
