--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<!-- <div id="contentApp">
+<div id="contentApp">
   <app-navbar></app-navbar>
   <app-sidebar></app-sidebar>
+  <app-admin></app-admin>
+</div>
