modification de l'affichage du formulaire

--- a/src/app/Component/navbar/navbar.component.css
+++ b/src/app/Component/navbar/navbar.component.css
@@ -1,11 +1,30 @@
 #content {
-    padding-bottom: 5px;
-    border-bottom: 1px black solid;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     display: flex;
     justify-content: space-between;
+    border-radius: 5px;
+    background-color: #e2e2e2;
+    height: 50px;
+}
+
+#logo,
+#date {
+    margin-left: 10px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttonDiv {
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .button {
+    font-weight: 700;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     background-color: #04AA6D;
     color: white;
