--- a/src/app/Component/sidebar/sidebar.component.css
+++ b/src/app/Component/sidebar/sidebar.component.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     justify-self: center;
     padding: 18px;
-    max-width: 15%;
-    border-right: 1px solid black;
+    width: 100%;
 }
 
 #general {
@@ -24,4 +23,11 @@
 
 .button:hover {
     background-color: #45a049;
+}
+
+.container {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 10px;
 }
