--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -1,14 +1,16 @@
-<div id="general">
-    <div id="sidebar">
-        <button class="button" (click)="afficheFormulaire=appelFormulairePriseRdv(afficheFormulaire)">Prise de
-            RDV</button>
-        <div>Calendrier de RDV</div>
+<div class="container">
+    <div id="general">
+        <div id="sidebar">
+            <button class="button" (click)="appelFormulairePriseRdv()">Prise de
+                RDV</button>
+            <div>Calendrier de RDV</div>
+        </div>
     </div>
-    <div>
-        <p *ngIf="afficheFormulaire===true; else notAfficheFormulaire">
-            <app-form></app-form>
-        </p>
-        <ng-template #notAfficheFormulaire>
-        </ng-template>
-    </div>
+</div>
+<div>
+    <!--    <p *ngIf="afficheFormulaire===true; else notAfficheFormulaire">
+        <app-form></app-form>
+    </p> -->
+    <ng-template #notAfficheFormulaire>
+    </ng-template>
 </div>
