--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -3,14 +3,13 @@
         <div id="sidebar">
             <button class="button" (click)="appelFormulairePriseRdv()">Prise de
                 RDV</button>
-            <div>Calendrier de RDV</div>
         </div>
     </div>
 </div>
-<div>
-    <!--    <p *ngIf="afficheFormulaire===true; else notAfficheFormulaire">
+<!-- <div>
+       <p *ngIf="afficheFormulaire===true; else notAfficheFormulaire">
         <app-form></app-form>
-    </p> -->
+    </p>
     <ng-template #notAfficheFormulaire>
     </ng-template>
-</div>
+</div> -->
