--- a/src/app/Component/calendar/calendar.component.css
+++ b/src/app/Component/calendar/calendar.component.css
@@ -43,7 +43,7 @@
     color: white;
     border-radius: 5px;
     background-color: #adadad;
-    height: 50px;
+    height: 25px;
     width: 100px;
 }
 
@@ -52,4 +52,9 @@
     border: solid, black;
     background-color: rgb(255, 255, 255);
     cursor: pointer;
+}
+
+.calendar-container {
+    top: 1;
+    height: 100%;
 }
