--- a/src/app/Component/navbar/navbar.component.css
+++ b/src/app/Component/navbar/navbar.component.css
@@ -3,12 +3,13 @@
     display: flex;
     justify-content: space-between;
     border-radius: 5px;
-    background-color: #e2e2e2;
+    background-color: #313131;
     height: 50px;
 }
 
 #logo,
 #date {
+    color: whitesmoke;
     margin-left: 10px;
     font-weight: 700;
     display: flex;
