--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div id="contentApp">
   <app-navbar></app-navbar>
   <app-sidebar></app-sidebar>
-  <app-admin></app-admin>
+  <!-- <app-admin></app-admin> -->
+  <app-calendar></app-calendar>
+  <app-daily></app-daily>
 </div>
