--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <app-navbar class="navbar"></app-navbar>
   <div class="container">
     <div class="sidebar-container">
@@ -9,4 +9,6 @@
     </div>
   </div>
   <app-footer></app-footer>
-</div>
+</div> -->
+
+<app-calendar></app-calendar>
