ajout gest creneaux etc

--- a/src/app/Component/admin/admin.component.css
+++ b/src/app/Component/admin/admin.component.css
@@ -5,3 +5,24 @@
 .formEdit{
     background-color: yellow;
 }
+.admin{
+    background-color:  LightGray;
+    display: flex;
+}
+.detail{
+    background-color: aquamarine;
+}
+
+table, th, td {
+    border: 1px solid;
+  }
+  table {
+    width: 150px;
+  }
+
+  #listerlesRendezVous,
+#detailRendezVous,
+#rechercherRendezVous,
+#editerRendezVous {
+    flex: 1;
+}
