--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div id="contentApp">
   <app-navbar></app-navbar>
-  <app-sidebar></app-sidebar>
+  <!-- <app-sidebar></app-sidebar> -->
+  <app-form></app-form>
+  <app-calendar></app-calendar>
   <app-admin></app-admin>
 </div>
