--- a/src/app/Component/calendar/calendar.component.css
+++ b/src/app/Component/calendar/calendar.component.css
@@ -1,5 +1,6 @@
 .week-container,
-.day-container {
+.day-container,
+.month-selector {
     font-weight: 600;
     display: grid;
     justify-content: center;
@@ -57,4 +58,28 @@
 .calendar-container {
     top: 1;
     height: 100%;
+}
+
+.button {
+    font-weight: 700;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    background-color: #04AA6D;
+    color: white;
+    padding: 6px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    font-weight: 500;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
+
+.afficher-month,
+.afficher-annee {
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
