--- a/src/app/Component/calendar/calendar.component.html
+++ b/src/app/Component/calendar/calendar.component.html
@@ -6,29 +6,31 @@
 
 <div class="calendar-container">
     <!-- A afficher nico stp merci  -->
-    <div class="week-container">
-        <div class="divcss">
+    <div class="divcss">
+        <div class="month-selector">
             <div>
-                <button (click)="changeMoisPrecedent(moisPrecedent, annee)">
+                <button class="button" (click)="changeMoisPrecedent(moisPrecedent, annee)">
                     << </button>
             </div>
-            <div>{{grilleMois[moisAAfficher] }} </div>
-            <div>{{annee}} </div>
+            <div class="afficher-month">{{grilleMois[moisAAfficher] }} </div>
+            <div class="afficher-annee">{{annee}} </div>
             <div>
-                <button (click)="changeMoisSuivant(moisSuivant, annee)">
+                <button class="button" (click)="changeMoisSuivant(moisSuivant, annee)">
                     >> </button>
             </div>
+        </div>
+        <div class="week-container">
             <div *ngFor="let jour of grilleSemaine" class="name-week">
                 <p class="jour">{{ jour }} </p>
             </div>
         </div>
-        <div class="divcss">
-            <div class="day-container">
-                <div class="day" *ngFor="let jour of tableauNombreJoursMoisEncours; let i = index"
-                    [style.grid-column]="i === 0 ? premierJourMois : ''">
-                    <div>
-                        <p class="day-text">{{jour}}</p>
-                    </div>
+    </div>
+    <div class="divcss">
+        <div class="day-container">
+            <div class="day" *ngFor="let jour of tableauNombreJoursMoisEncours; let i = index"
+                [style.grid-column]="i === 0 ? premierJourMois : ''">
+                <div>
+                    <p class="day-text">{{jour}}</p>
                 </div>
             </div>
         </div>
