--- a/src/app/Component/navbar/navbar.component.html
+++ b/src/app/Component/navbar/navbar.component.html
@@ -2,6 +2,6 @@
     <div id="logo">Wild Code Calendar</div>
     <div id="date">{{createDate | date : 'dd MMMM YYYY' }}</div>
     <div class="buttonDiv">
-        <button class="button" (click)="client.isAdmin=affichageAdmin(client.isAdmin)">Login</button>
+        <button class="button" (click)="admin()">Login</button>
     </div>
 </div>
