--- a/src/app/Component/sidebar/sidebar.component.css
+++ b/src/app/Component/sidebar/sidebar.component.css
@@ -26,10 +26,10 @@
 }
 
 .container {
-    z-index: 50;
-    position: fixed;
-    top: 1;
-    left: 1;
+    /* z-index: 50; */
+    /* position: fixed; */
+    /* top: 1;
+    left: 1; */
     height: 100vh;
     width: 25vh;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
