--- a/src/app/Component/form/form.component.html
+++ b/src/app/Component/form/form.component.html
@@ -62,8 +62,8 @@
         </div>
         <div class="row">
             <label for="date">Date</label>
-            <input id="date" name="date" placeholder="Choix de la date" type="date" [(ngModel)]="creneau.date" required>
-            #date="ngModel" required>
+            <input id="date" name="date" placeholder="Choix de la date" type="datetime-local" [(ngModel)]="creneau.date"
+                required>
         </div>
 
         <!-- Message d'erreurs de email -->
