--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -1,13 +1,10 @@
 <div class="container">
     <div id="general">
         <div id="sidebar">
+            <button class="button"> <a [routerLink]="['/calendar']">Acceuil</a></button>
             <button class="button"> <a [routerLink]="['/form']">Prise de RDV</a></button>
             <button class="button"> <a [routerLink]="['/admin']">Gestion Administrator</a></button>
             <button class="button"> <a [routerLink]="['/calendar']">Calendrier</a></button>
-
-            <!-- <button class="button">Gestion Administrator</button>
-            <button class="button" (click)="appelAdminMode()">Gestion Administrator</button>
-            <button class="button" (click)="appelAdminMode()">Gestion Administrator</button> -->
 
         </div>
     </div>
