chargment bon jour lors de choix calendrier et autres

--- a/src/app/Component/daily/daily.component.css
+++ b/src/app/Component/daily/daily.component.css
@@ -11,3 +11,10 @@ body {
     border: 1px solid black;
 
 }
+
+.afficher-month,
+.afficher-annee {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
