--- a/src/app/Component/sidebar/sidebar.component.css
+++ b/src/app/Component/sidebar/sidebar.component.css
@@ -15,6 +15,8 @@
     background-color: #04AA6D;
     color: white;
     padding: 6px 10px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -36,4 +38,9 @@
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
