--- a/src/app/Component/admin/admin.component.css
+++ b/src/app/Component/admin/admin.component.css
@@ -1,28 +1,81 @@
 .detailRDV {
-/* cursor: pointer; */
+    /* cursor: pointer; */
     background-color: aqua;
 }
-.formEdit{
+
+.formEdit {
     background-color: yellow;
 }
-.admin{
-    background-color:  LightGray;
+
+.admin {
+    background-color: LightGray;
+    border-radius: 5px;
     display: flex;
 }
-.detail{
+
+.detail {
     background-color: aquamarine;
 }
 
-table, th, td {
+table,
+th,
+td {
     border: 1px solid;
-  }
-  table {
-    width: 150px;
-  }
+}
 
-  #listerlesRendezVous,
+table {
+    width: 150px;
+}
+
+#listerlesRendezVous,
 #detailRendezVous,
 #rechercherRendezVous,
 #editerRendezVous {
     flex: 1;
+}
+
+.admin-container {
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    grid-template-columns: repeat(7, auto);
+    gap: 5px;
+    margin: 5px;
+}
+
+.container {}
+
+.divcss {
+    border-radius: 5px;
+    background-color: #e2e2e2;
+}
+
+input[type=text] {
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    width: 80%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+.button {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    margin-top: 10px;
+    background-color: #04AA6D;
+    color: white;
+    padding: 6px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
+
+.title {
+    font-weight: 800;
 }
