ajout css daily

--- a/src/app/Component/daily/daily.component.css
+++ b/src/app/Component/daily/daily.component.css
@@ -2,14 +2,12 @@ body {
     margin: none;
 }
 
-.creneau {
-    border: 1px solid black;
-    margin: none;
-}
-
 .contentDaily {
     border: 1px solid black;
-
+    background-color: #adadad;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .afficher-month,
@@ -17,4 +15,39 @@ body {
     display: flex;
     justify-content: center;
     text-align: center;
+    color: black;
+}
+
+.creneau {
+    border: 1px solid black;
+    margin: none;
+    /* margin: 5px;
+    padding: 2px 2px; */
+    font-weight: 600;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    color: white;
+    border-radius: 5px;
+    background-color: #adadad;
+    height: 60px;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.creneau:hover {
+    color: black;
+    border: solid, black;
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
+    color: black;
 }
