Modification texte bouton Admin

--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <div id="sidebar">
             <button class="button"> <a [routerLink]="['/calendar']">Acceuil</a></button>
             <button class="button"> <a [routerLink]="['/form']">Prise de RDV</a></button>
-            <button class="button"> <a [routerLink]="['/admin']">Gestion Administrator</a></button>
+            <button class="button"> <a [routerLink]="['/admin']">Gestion Admin</a></button>
             <button class="button"> <a [routerLink]="['/calendar']">Calendrier</a></button>
         </div>
     </div>
